[package]
name = "passfd"
version = "0.1.5"
authors = ["Alexander Polakov <plhk@sdf.org>"]
edition = "2018"
description = "File descriptor passing"
license = "MIT"
documentation = "https://docs.rs/passfd/"
repository = "https://github.com/polachok/passfd"
homepage = "https://github.com/polachok/passfd"

[dependencies]
libc = "0.2"
async-trait = { version = "0.1", optional = true }
tokio = { version = "1.19", optional = true, features = [
  "net",
  "rt",
  "macros",
  "io-util",
] }
mio = { version = "0.6", optional = true }
mio-uds = { version = "0.6", optional = true }
tokio2 = { package = "tokio", version = "0.2", features = [
  "uds",
  "io-driver",
], optional = true }
futures-core = { version = "0.3", optional = true }

[dev-dependencies]
tempdir = "0.3"

[features]
tokio = ["dep:tokio", "async-trait"]
tokio_02 = ["tokio2", "mio", "mio-uds", "futures-core"]
