[package]
name = "passfd"
version = "0.2.0"
authors = ["Alexander Polakov <plhk@sdf.org>"]
edition = "2018"
description = "File descriptor passing"
license = "MIT"
documentation = "https://docs.rs/passfd/"
repository = "https://github.com/polachok/passfd"
homepage = "https://github.com/polachok/passfd"

[dependencies]
libc = "0.2"
tokio = { version = "1.0", features = ["net"], optional = true }
futures-core = { version = "0.3", optional = true }

[dev-dependencies]
tempdir = "0.3"
tokio = { version = "1.0", features = ["test-util", "rt", "macros", "io-util"] }

[features]
async = ["tokio", "futures-core"]
